# filopodia-tool

./: LICENSE.txt  README.md  src
src/: CMakeLists.txt
src/.AUTO_CREATED/: CMakeLists.txt  hxfilo.cpp  hxfilo.h
src/.AUTO_CREATED/share/resources/: hxfilo.rc
src/hxfilo/: .CMakeLists.txt.swp  CMakeLists.txt  ConvertVectorAndMcDArray.h  ExFilopodiaTraceTool.cpp  ExFilopodiaTraceTool.h  FilopodiaFunctions.cpp  FilopodiaFunctions.h  FilopodiaOperationSet.cpp  FilopodiaOperationSet.h  FilopodiaOperationSetTest.h  HxAdjustWindowLevelOfAmiraMesh.cpp  HxAdjustWindowLevelOfAmiraMesh.h  HxClipSpatialGraph.cpp  HxClipSpatialGraph.h  HxClipSpatialGraphByThickness.cpp  HxClipSpatialGraphByThickness.h  HxCompareFilopodiaSpatialGraphs.cpp  HxCompareFilopodiaSpatialGraphs.h  HxConvertHoc2AmiraMesh.cpp  HxConvertHoc2AmiraMesh.h  HxConvertTif2AmiraMesh.cpp  HxConvertTif2AmiraMesh.h  HxExtractSlicesFrom3DImage.cpp  HxExtractSlicesFrom3DImage.h  HxFieldCorrelation.cpp  HxFieldCorrelation.h  HxFilopodiaStats.cpp  HxFilopodiaStats.h  HxFilopodiaTEASAR.cpp  HxFilopodiaTEASAR.h  HxFilopodiaTrack.cpp  HxFilopodiaTrack.h  HxGrowthConeFieldTrack.cpp  HxGrowthConeFieldTrack.h  HxGrowthConeTrack.cpp  HxGrowthConeTrack.h  HxInitFilopodiaPlugins.cpp  HxLabelInsideOutside.cpp  HxLabelInsideOutside.h  HxLabelPSFCorrection.cpp  (+42 more)
src/hxfilo/data/colormaps/: filopodiaGlow.am
src/hxfilo/doc/: HxConvertHoc2AmiraMesh.doc  HxConvertTif2AmiraMesh.doc  HxExtractSlicesFrom3DImage.doc  HxFieldCorrelation.doc  HxFilopodiaStats.doc  HxLabelInsideOutside.doc  HxMergeSpatialGraphs.doc  HxNodeAtRegionMaximum.doc  HxRetraceFilopodia.doc  HxShortestPathToPointMap.doc  HxSplitLabelField.doc  HxTraceDijkstraMap.doc
src/hxfilo/hxcontourtree/: AugmentedContourTree.cpp  AugmentedContourTree.h  CMakeLists.txt  CompareCheckFunctors.h  ContourTree.cpp  ContourTree.h  HxContourTreeSegmentation.cpp  HxContourTreeSegmentation.h  HxCreateContourTree.cpp  HxCreateContourTree.h  HxMergeTreeSegmentation.cpp  HxMergeTreeSegmentation.h  HxPropagateContours.cpp  HxPropagateContours.h  HxTouchPointGraphBuilder.cpp  HxTouchPointGraphBuilder.h  Lattice3Mesh.cpp  Lattice3Mesh.h  MergeTree.cpp  MergeTree.h  Package  SetUnionDataStructure.cpp  SetUnionDataStructure.h  SimplicialMesh.h  SimplicialMesh2D_Test.cpp  SimplicialMesh2D_Test.h  SimplicialMesh3DForHexahedralMesh.cpp  SimplicialMesh3DForHexahedralMesh.h  api.h  init.cpp  version.cpp
src/hxfilo/hxcontourtree/data/tutorials/contourtree/: foam_ContourTreeSegmentation.hx  foam_HierarchicalWatershed_versus_ContourTreeSegmentation.hx  foam_WatershedSeparation-8-SegmentedPores_versus_ContourTreeSegmentation.hx
src/hxfilo/hxcontourtree/doc/: HxContourTreeSegmentation.doc  HxCreateContourTree.doc  HxPropagateContours.doc  HxTouchPointGraphBuilder.doc  tutContourTreeSegmentation.doc
src/hxfilo/hxcontourtree/share/resources/: hxcontourtree.rc
src/hxfilo/hxcontourtree/share/script-objects/: ContourTreeSegmentation.scro
src/hxfilo/pointmatching/: AngularCacheObject3d.cpp  AngularCacheObject3d.h  AngularPointRepresentation3d.cpp  AngularPointRepresentation3d.h  CMakeLists.txt  ExactPointMatchingAlgorithm.cpp  ExactPointMatchingAlgorithm.h  GreedyPointMatchingAlgorithm.cpp  McCliqueDetection.cpp  McCliqueDetection.h  Package  PointMatchingDataStruct.cpp  PointMatchingDataStruct.h  PointMatchingScoringFunction.cpp  PointMatchingScoringFunction.h  PointRepresentation.h  SimpleCacheObject3d.cpp  SimpleCacheObject3d.h  SimplePointRepresentation3d.cpp  SimplePointRepresentation3d.h  SparsePointMatchingAlgorithm.cpp  StartTransformationGenerator3d.cpp  StartTransformationGenerator3d.h  Test_ExactPointMatching.cpp  Test_ExactPointMatching.h  Test_GreedyPointMatching.cpp  Test_GreedyPointMatching.h  api.h  init.cpp
src/hxfilo/pointmatching/hxgraphalgorithms/: CMakeLists.txt  KruskalTreeClusterer.cpp  KruskalTreeClusterer.h  McCliqueDetection.cpp  McCliqueDetection.h  McDijkstraShortestPath.cpp  McDijkstraShortestPath.h  McMinSpanningTree.h  Package  api.h
src/hxfilo/pointmatching/share/resources/: pointmatching.rc
src/hxfilo/share/resources/: hxfilo.rc  test_hxfilopodia.rc
